micro cli plugin is deprecated

--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -4,6 +4,8 @@ title: Deploying MicroBOSH to OpenStack
 
 This topic explains how to deploy MicroBOSH to OpenStack.
 
+<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="/docs/init-openstack.html">Initializing on OpenStack</a> document.</p>
+
 ##<a id="create-manifest"></a>Step 1: Create a Deployment Manifest ##
 
 The MicroBOSH deployment manifest is a YAML file that defines the components and
