--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -4,6 +4,8 @@ title: Deploying MicroBOSH to AWS
 
 This topic describes how to deploy MicroBOSH to Amazon Web Services (AWS).
 
+<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="/docs/init-aws.html">Initializing on AWS</a> document.</p>
+
 ## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
 
 The MicroBOSH deployment manifest is a YAML file that defines the components and properties of the deployment. Create a manifest for your deployment as follows:
