warden cpi details

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -70,6 +70,7 @@ title: Index
     * [OpenStack](openstack-cpi.html)
     * [vSphere](vsphere-cpi.html)
     * [vCloud](vcloud-cpi.html)
+    * [Warden/Garden](warden-cpi.html)
 
 ### <a id="hm"></a> Health Management of VMs and Processes
 
