Update bosh-init documentation with Mac OS X dependencies
[#101454442](https://www.pivotaltracker.com/story/show/101454442)

Signed-off-by: Wagner Camarao <wcamarao@vmware.com>

--- a/install-bosh-init.html.md.erb
+++ b/install-bosh-init.html.md.erb
@@ -44,5 +44,17 @@ Here are the latest binaries:
 	$ sudo yum install gcc ruby ruby-devel mysql-devel postgresql-devel postgresql-libs sqlite-devel libxslt-devel libxml2-devel yajl-ruby
 	</pre>
 
+	**Mac OS X**
+
+	Install Apple Command Line Tools:
+	<pre class="terminal">
+	$ xcode-select --install
+	</pre>
+
+	Use [Homebrew](http://brew.sh) to install OpenSSL:
+	<pre class="terminal">
+	$ brew install openssl
+	</pre>
+
 ---
 See [Using bosh-init](using-bosh-init.html) for details on how to use it.
