document pre-start

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -99,7 +99,9 @@ title: Index
  * What is a job?
     * Creating a job
     * Job properties
-    * [Drain scripts](drain-scripts.html)
+    * [Job lifecycle](job-lifecycle.html)
+        * [Pre-start script](pre-start.html)
+        * [Drain script](drain.html)
  * What is a package?
     * [Creating a package](packages.html)
     * Relationship to release blobs
