remove public stemcell reference

--- a/uploading-releases.html.md.erb
+++ b/uploading-releases.html.md.erb
@@ -8,7 +8,7 @@ As described earlier, each deployment references one or many releases on the Dir
 
 ## <a id='find'></a> Finding Releases
 
-Releases are distributed in two ways: as a release tarball or through a source code repository. The [Releases section of bosh.io](//bosh.io/releases) provides a good list of available releases and their tarballs.
+Releases are distributed in two ways: as a release tarball or through a source code repository. The [releases section of bosh.io](//bosh.io/releases) provides a good list of available releases and their tarballs.
 
 Here are a few popular releases:
 
