--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -12,7 +12,7 @@ This document shows how to initialize new [environment](terminology.html#environ
     $ mkdir ~/my-bosh
     </pre>
 
-1. Create a deployment manifest file named `bosh.yml` in the deployment director based on the template below.
+1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
 
     In the template, you must replace the `ELASTIC-IP`, `SUBNET-ID`, `AVAILABILITY-ZONE`, `ACCESS-KEY-ID`, and `SECRET-ACCESS-KEY` properties. We describe replacing these properties in [Step 2: Prepare an AWS Account](#prepare-aws).
 
