--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -12,7 +12,7 @@ This document shows how to initialize new [environment](terminology.html#environ
     $ mkdir ~/my-bosh
     </pre>
 
-1. Create a deployment manifest file named `bosh.yml` in the deployment director based on the template below.
+1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
 
     In the template, you must replace the `NETWORK-UUID`, `PRIVATE-IP`, `PRIVATE-CIDR`, `PRIVATE-GATEWAY-IP`, `DNS-IP`, `FLOATING-IP`, `OPENSTACK-PASSWORD`, `IDENTITY-API-ENDPOINT`, `OPENSTACK-TENANT`, and `OPENSTACK-USERNAME` properties. We describe replacing these properties in [Step 2: Prepare an OpenStack environment](#prepare-openstack).
 
