--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -12,7 +12,7 @@ This document shows how to initialize new [environment](terminology.html#environ
     $ mkdir ~/my-bosh
     </pre>
 
-1. Create a deployment manifest file named `bosh.yml` in the deployment director based on the template below.
+1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
 
     <p class="note"><strong>Note</strong>: The example below uses several predefined password. We recommend to replace them with passwords of your choice.</p>
 
