--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -67,6 +67,7 @@ title: Index
  * [Trusted certificates](trusted-certs.html)
  * IaaS specifics
     * [AWS](aws-cpi.html)
+        * [Using IAM instance profiles](aws-iam-instance-profiles.html)
     * [OpenStack](openstack-cpi.html)
     * [vSphere](vsphere-cpi.html)
     * [vCloud](vcloud-cpi.html)
