added director s3 configuration

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -36,11 +36,11 @@ title: Index
     * [On OpenStack](deploy-microbosh-to-openstack.html)
     * [On vSphere](deploy-microbosh-to-vsphere.html)
 
-### <a id="director-config"></a> Advanced configuration
+### <a id="director-config"></a> Advanced Director configuration
 
- * [User management on the Director](director-users.html)
- * [Configuring the Director to use External Database](connect-postgres-hadb.html)
- * Configuring the Director to use External Blobstore
+ * [User management](director-users.html)
+ * [Configuring External Database](director-configure-db.html)
+ * [Configuring External Blobstore](director-configure-blobstore.html)
 
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
