mention ruby 2 requirement

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -13,7 +13,7 @@ To install both of these gems:
 $ gem install bosh_cli bosh_cli_plugin_micro --no-ri --no-rdoc
 </pre>
 
-<p class='note'><strong>Note</strong>: Installing the BOSH CLI requires Ruby 1.9.3, 2.0.x, or 2.1.x.</p>
+<p class='note'>Note: Installing the BOSH CLI requires Ruby 2+</p>
 
 Use the following command to consult the BOSH CLI help and to verify that CLI can run:
 
