--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -24,6 +24,7 @@ title: Index
     * [On vSphere](init-vsphere.html)
     * [On vCloud](init-vcloud.html)
     * [On Local machine using BOSH Lite](bosh-lite.html)
+ * [Director SSL Certificate Configuration](director-certs.html)
  * [Install bosh-init](install-bosh-init.html)
  * [Using bosh-init](using-bosh-init.html)
     * [Migrating to bosh-init from the micro CLI plugin](migrate-to-bosh-init.html)
@@ -39,6 +40,7 @@ title: Index
 ### <a id="director-config"></a> Advanced Director configuration
 
  * [User management](director-users.html)
+    * [UAA Integration](director-users-uaa.html)
  * [Configuring External Database](director-configure-db.html)
  * [Configuring External Blobstore](director-configure-blobstore.html)
 
