--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -119,9 +119,15 @@ jobs:
       db: *db
       cpi_job: cpi
       max_threads: 10
+      user_management:
+        provider: local
+        local:
+          users:
+          - {name: admin, password: admin}
+          - {name: hm, password: hm-password}
 
     hm:
-      director_account: {user: admin, password: admin}
+      director_account: {user: hm, password: hm-password}
       resurrector_enabled: true
 
     aws: &aws
