--- a/init-vcloud.html.md.erb
+++ b/init-vcloud.html.md.erb
@@ -104,9 +104,15 @@ jobs:
       db: *db
       cpi_job: cpi
       max_threads: 4
+      user_management:
+        provider: local
+        local:
+          users:
+          - {name: admin, password: admin}
+          - {name: hm, password: hm-password}
 
     hm:
-      director_account: {user: admin, password: admin}
+      director_account: {user: hm, password: hm-password}
       resurrector_enabled: true
 
     vcd: &vcd # <--- Replace values below
