--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -68,6 +68,7 @@ title: Index
  * IaaS specifics
     * [AWS](aws-cpi.html)
         * [Using IAM instance profiles](aws-iam-instance-profiles.html)
+        * [Using instance storage](aws-instance-storage.html)
     * [OpenStack](openstack-cpi.html)
     * [vSphere](vsphere-cpi.html)
     * [vCloud](vcloud-cpi.html)
