mention ruby2 for bosh-init

--- a/install-bosh-init.html.md.erb
+++ b/install-bosh-init.html.md.erb
@@ -56,5 +56,12 @@ Here are the latest binaries:
 	$ brew install openssl
 	</pre>
 
+1. Make sure Ruby 2+ is installed:
+
+	<pre class="terminal">
+	$ ruby -v
+	ruby 2.2.3p173 (2015-08-18 revision 51636) [x86_64-darwin14]
+	</pre>
+
 ---
 See [Using bosh-init](using-bosh-init.html) for details on how to use it.
